--- a/index.html
+++ b/index.html
@@ -11,14 +11,35 @@
     background-color: #000;
     color: #fff;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
     font-family: Arial, sans-serif;
   }
+  .social-links {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  .social-links li {
+    margin-right: 10px;
+  }
+  .social-links li:last-child {
+    margin-right: 0;
+  }
 </style>
 </head>
 <body>
-  <h1>Coming Soon</h1>
+  <h1>DesignBlues</h1> 
+  <p>Coming Soon</p>
+  <ul class="social-links">
+    <li><a href="https://www.instagram.com/designblues_studio/">instagram</a></li>
+    <li><a href="https://www.behance.net/designblues_studio">behance</a></li>
+    <li><a href="https://pin.it/7ddQ84A66">pinterest</a></li>
+    <li><a href="https://www.threads.net/@designblues_studio">threads</a></li>
+  </ul>
 </body>
 </html>
