--- a/index.html
+++ b/index.html
@@ -32,14 +32,51 @@
   }
 </style>
 </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Coming Soon</title>
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    background-color: #000;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-family: Arial, sans-serif;
+  }
+  .social-links {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  .social-links li {
+    margin-right: 10px;
+  }
+  .social-links li:last-child {
+    margin-right: 0;
+  }
+  .social-links a {
+    color: #fff;
+    text-decoration: none;
+  }
+</style>
+</head>
 <body>
   <h1>DesignBlues</h1> 
-  <p>Coming Soon</p>
   <ul class="social-links">
-    <li><a href="https://www.instagram.com/designblues_studio/">instagram</a></li>
-    <li><a href="https://www.behance.net/designblues_studio">behance</a></li>
-    <li><a href="https://pin.it/7ddQ84A66">pinterest</a></li>
-    <li><a href="https://www.threads.net/@designblues_studio">threads</a></li>
+    <li><a href="https://www.instagram.com/designblues_studio/">Instagram</a></li>
+    <li><a href="https://www.behance.net/designblues_studio">Behance</a></li>
+    <li><a href="https://pin.it/7ddQ84A66">Pinterest</a></li>
+    <li><a href="https://www.threads.net/@designblues_studio">Threads</a></li>
   </ul>
 </body>
 </html>
