--- a/page-about-us.html
+++ b/page-about-us.html
@@ -65,9 +65,9 @@
           <h2 class="mb-4">She is an interior designer by profession, considering herself a responsible and artistic individual.</h2>
           <p class="mb-5">A creative, artistic, and ambitious interior designer, she has a talent for thinking outside the box and coming up with innovative designs. </p>
           <div class="mb-5">
-            <i class="fas fa-quote-left display-6 text-light-red mb-4"></i>
-            <p class="lead mb-4">Her philosophy revolves around clean lines, early color palettes, and contemporary aesthetics, with a touch of unique artistic elements and decor.</p>
             <h6 class="text-gray-suit">Inchara Reddy</h6>
+
+            <p class="lead mb-4">Her philosophy revolves around clean lines, early color palettes, and contemporary aesthetics, with a touch of unique artistic elements and decor.</p>
           </div>
           <p>Currently, deeply immersed in projects, she crafts spaces tailored to the unique needs and preferences of her clients.</p>
           <p>Dealing with clients' requirements on each interior project, she adds a personal touch and value by incorporating all necessary components under one roof and creating unique spaces tailored to their specific needs.</p>
@@ -79,7 +79,7 @@
  <br>
  <br>
  <div class="manifesto-title">
-  <h2>Our Manifesto</h2>
+  <h2>Manifesto</h2>
 </div>
 
  <div class="container">
