--- a/index.html
+++ b/index.html
@@ -54,6 +54,92 @@
             </div>
           </div>
         </div>
+        <div id="carouselExampleControls" class="carousel slide custom-carousel" data-bs-ride="carousel" data-bs-interval="2000">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="assets/images/home/slide1.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/images/home/slide2.jpg" class="d-block w-100" alt="...">
+            </div>
+
+          </div>
+        </div>
+        <br/>
+      
+        <div class="container mt-5">
+          <h4 class="text-center mb-4">Why choose Designblues?</h4>
+          <div class="row justify-content-center">
+            <div class="col-6 col-md-2 text-center mb-4">
+              <div class="circle bg-light d-flex align-items-center justify-content-center">
+                <p class="mb-0">Experiential</p>
+              </div>
+            </div>
+            <div class="col-6 col-md-2 text-center mb-4">
+              <div class="circle bg-light d-flex align-items-center justify-content-center">
+                <p class="mb-0">Versatile</p>
+              </div>
+            </div>
+            <div class="col-6 col-md-2 text-center mb-4">
+              <div class="circle bg-light d-flex align-items-center justify-content-center">
+                <p class="mb-0">Quality</p>
+              </div>
+            </div>
+            <div class="col-6 col-md-2 text-center mb-4">
+              <div class="circle bg-light d-flex align-items-center justify-content-center">
+                <p class="mb-0">Unique</p>
+              </div>
+            </div>
+            <div class="col-6 col-md-2 text-center mb-4">
+              <div class="circle bg-light d-flex align-items-center justify-content-center">
+                <p class="mb-0">Detail Oriented</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br/>
+        <div class="container mt-5">
+          <h4 class="text-center mb-4">Our Interior Design Process</h4>
+          <div class="row justify-content-center">
+            <div class="col-md-3 text-center mb-4 position-relative">
+              <div class="small-circle bg-light d-flex align-items-center justify-content-center position-absolute top-0 start-50 translate-middle">
+                <p class="mb-0">1</p>
+              </div>
+              <div class="bg-light p-4 pt-5">
+                <p class="mt-3 fw-bold">Client Engagement</p>
+                <p class="small">We meet and understand your interior design requirements, assess the space, plan the layout, and create a mood board.</p>
+              </div>
+            </div>
+            <div class="col-md-3 text-center mb-4 position-relative">
+              <div class="small-circle bg-light d-flex align-items-center justify-content-center position-absolute top-0 start-50 translate-middle">
+                <p class="mb-0">2</p>
+              </div>
+              <div class="bg-light p-4 pt-5">
+                <p class="mt-3 fw-bold">Conceptualization</p>
+                <p class="small">We brainstorm and ideate, providing interior design solutions tailored to your needs and creating an exceptional experience.</p>
+              </div>
+            </div>
+            <div class="col-md-3 text-center mb-4 position-relative">
+              <div class="small-circle bg-light d-flex align-items-center justify-content-center position-absolute top-0 start-50 translate-middle">
+                <p class="mb-0">3</p>
+              </div>
+              <div class="bg-light p-4 pt-5">
+                <p class="mt-3 fw-bold">Design & Execution</p>
+                <p class="small">We create 3D designs, technical drawings, and select materials. We meticulously oversee every detail of the interior work.</p>
+              </div>
+            </div>
+            <div class="col-md-3 text-center mb-4 position-relative">
+              <div class="small-circle bg-light d-flex align-items-center justify-content-center position-absolute top-0 start-50 translate-middle">
+                <p class="mb-0">4</p>
+              </div>
+              <div class="bg-light p-4 pt-5">
+                <p class="mt-3 fw-bold">Project Oversight</p>
+                <p class="small">We help identify an interior design contractor, get the bill of quantities approved, and conduct site visits for quality checks.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br/>
         <!--portfolio-->
         <div class="container mt-3">
           <div class="row gx-5 portfolio-list"> 
@@ -235,5 +321,7 @@
     <script src="assets/js/jquery.countTo.js"></script>
     <!-- Global - Main js-->
     <script src="assets/js/global.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
   </body>
 </html>
