--- a/h2.html
+++ b/h2.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="assets/images/favicon.png">
     <!-- Site Title-->
     <title>Designblues</title>
-    <meta name="description" content="A Template for Architectural Interior Design company website.">
+    <meta name="description" content="Interior Design Firm">
     <!-- Bootstrap CSS file-->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <!-- Flickity CSS file-->
