--- a/h1.html
+++ b/h1.html
@@ -53,7 +53,7 @@
                 <div class="col-lg-6 col-md-12 col-12">
                   <div class="bg-white">
                     <div class="px-lg-5 py-lg-5 px-md-5 py-md-5 px-3 py-3">
-                      <h1 class="mb-4" style="white-space: nowrap;">Inchara Reddy's Home</h1>
+                      <h1 class="mb-4" style="white-space: nowrap;">Natural Harmony</h1>
                       <p style="white-space: nowrap;">Harmony Between Indoor and Outdoor Spaces</p>
                     </div>
                   </div>
