--- a/h2.html
+++ b/h2.html
@@ -54,7 +54,7 @@
                   <div class="bg-white">
                     <div class="px-lg-5 py-lg-5 px-md-5 py-md-5 px-3 py-3">
                       <h1 class="mb-4" style="white-space: nowrap;">Elegant Retreat</h1>
-                      <p style="white-space: nowrap;">Harmony Between Indoor and Outdoor Spaces</p>
+                      <p style="white-space: nowrap;">Timeless Elegance Meets Contemporary Flair</p>
                     </div>
                   </div>
                 </div>
