--- a/h3.html
+++ b/h3.html
@@ -54,7 +54,7 @@
                  <!-- <div class="bg-white">  -->
                     <div class="px-lg-5 py-lg-5 px-md-5 py-md-5 px-3 py-3">
                       <h1 class="mb-4" style="white-space: nowrap;">Urban Oasis</h1>
-                      <p style="white-space: nowrap;">Harmony Between Indoor and Outdoor Spaces</p>
+                      <p style="white-space: nowrap;">An Elegant Retreat in the Heart of the City</p>
                     </div>
                   </div>
                 </div>
@@ -68,10 +68,10 @@
         <div class="container mt-lg-8 mt-md-7 mt-10">
           <div class="row gx-7">
             <div class="col-lg-6">
-              <p class="lead">A notable aspect of this interior design is the seamless connection between indoor and outdoor spaces. The large windows offer panoramic views of the surrounding environment, blurring the boundaries between the interior and exterior.              </p>
+              <p class="lead">This meticulously designed living space serves as an urban oasis, offering a serene and sophisticated escape from the bustling city life. The harmonious blend of textures, colors, and carefully curated elements creates an atmosphere of refined elegance and tranquility. The focal point of the room is the plush sectional sofa, inviting you to sink into its sumptuous cushions and unwind. The rich tones of the zebra-patterned throw pillows add a touch of exotic flair, while the oversized potted plant infuses the space with a refreshing natural element. The gallery wall, featuring an exquisite array of botanical prints and abstract art, adds depth and visual interest, reflecting a refined aesthetic sensibility.</p>
             </div>
             <div class="col-lg-6">
-              <p class="mb-lg-5 mb-4">The incorporation of potted plants and organic accents like the wooden stool and ceramic vases further reinforces this harmony with nature. The neutral color palette and minimalist furnishings create a cohesive flow, allowing the outdoor scenery to take center stage and become an integral part of the overall design aesthetic. This harmonious relationship between the interior spaces and the natural world fosters a sense of tranquility and respite from the hustle and bustle of modern life. </p>
+              <p class="mb-lg-5 mb-4">The sleek lines of the gold-accented coffee table and the contemporary light fixture overhead lend a modern edge, seamlessly blending with the timeless appeal of the built-in cabinetry. This harmonious fusion of styles creates a space that is both inviting and visually captivating, making it a true urban oasis where relaxation and sophistication converge.</p>
             </div>
           </div>
         </div>
