--- a/h4.html
+++ b/h4.html
@@ -54,7 +54,7 @@
                  <!-- <div class="bg-white">  -->
                     <div class="px-lg-5 py-lg-5 px-md-5 py-md-5 px-3 py-3">
                       <h1 class="mb-4" style="white-space: nowrap;">Contemporary Chic</h1>
-                      <p style="white-space: nowrap;">Harmony Between Indoor and Outdoor Spaces</p>
+                      <p style="white-space: nowrap;">Effortless Sophistication Meets Serene Ambiance</p>
                     </div>
                   </div>
                 </div>
@@ -68,10 +68,10 @@
         <div class="container mt-lg-8 mt-md-7 mt-10">
           <div class="row gx-7">
             <div class="col-lg-6">
-              <p class="lead">A notable aspect of this interior design is the seamless connection between indoor and outdoor spaces. The large windows offer panoramic views of the surrounding environment, blurring the boundaries between the interior and exterior.              </p>
+              <p class="lead">This contemporary living space exudes an air of chic sophistication harmoniously balanced with a serene, inviting ambiance. The thoughtful curation of furnishings showcases a mastery of modern design principles, with clean lines, natural materials, and a muted color palette creating a visually calming atmosphere.</p>
             </div>
             <div class="col-lg-6">
-              <p class="mb-lg-5 mb-4">The incorporation of potted plants and organic accents like the wooden stool and ceramic vases further reinforces this harmony with nature. The neutral color palette and minimalist furnishings create a cohesive flow, allowing the outdoor scenery to take center stage and become an integral part of the overall design aesthetic. This harmonious relationship between the interior spaces and the natural world fosters a sense of tranquility and respite from the hustle and bustle of modern life. </p>
+              <p class="mb-lg-5 mb-4">The space's focal point is the plush, low-profile sofa that invites relaxation and casual gatherings. Complemented by the sleek armchair and organic wooden accents, the arrangement fosters a sense of warmth and comfort. The strategic placement of potted plants and abstract wall art adds depth and visual interest, while the large windows seamlessly integrate the outdoors, allowing natural light to flood the space with a rejuvenating ambiance. </p>
             </div>
           </div>
         </div>
