--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- Site Title-->
     <title>Designblues</title>
     <meta name="description" content="Interior Design Firm">
+    <!-- Preview Image -->
+    <meta property="og:image" content="dbbanner.png">
     <!-- Bootstrap CSS file-->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <!-- Flickity CSS file-->
